--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "chroma-js": "^2.4.2",
+    "apca-w3": "^0.1.9",
+    "apcach": "^0.6.3",
+    "culori": "^3.2.0",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
