--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0",
     "sass": "^1.69.4",
     "vanilla-framework": "^4.5.0"
   },
