--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "apca-w3": "^0.1.9",
     "apcach": "^0.6.3",
+    "comlink": "^4.4.1",
     "culori": "^3.2.0",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
